--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,7 @@
 
 .heading-title {
   text-align: center;
+  margin-bottom: 25px;
 }
 .heading-title h1 {
   font-size: 50px;
@@ -258,7 +259,7 @@
   }
 }
 .items-title h3 {
-  font-size: 22px;
+  font-size: 36px;
   font-weight: 700;
   padding: 20px 0px;
   line-height: 30px;
@@ -290,9 +291,9 @@
   }
 }
 .items-title p {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 400;
-  line-height: 25px;
+  line-height: 27px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -472,7 +473,7 @@
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 800;
   border: none;
   border: solid 1px #FFD300;
@@ -906,6 +907,11 @@ ul ol {
   background: rgba(0, 149, 128, 0.79);
   position: absolute;
 }
+.inner-banner .heading-title h2 {
+  text-transform: uppercase;
+  font-size: 46px;
+  letter-spacing: 3px;
+}
 .inner-banner .content-wrapper {
   position: relative;
   z-index: 2;
@@ -1271,11 +1277,8 @@ ul ol {
   padding: 0px;
 }
 
-.our-process {
-  padding-bottom: 20px;
-}
 .our-process .process-img {
-  padding: 50px;
+  /* padding: 50px; */
 }
 .our-process .center-line {
   display: -webkit-box;
@@ -1580,7 +1583,7 @@ ul ol {
 }
 
 .clients-reviews .heading-title {
-  padding: 20px 0px 60px 0px;
+  /* padding: 20px 0px 60px 0px; */
 }
 .clients-reviews .heading-title h2 span {
   color: #009580;
@@ -2001,16 +2004,21 @@ footer .footer-content .footer-menu {
   color: #fff;
 }
 footer .footer-content .footer-menu h4 {
-  padding: 10px 0px;
-  font-size: 16px;
-  font-weight: 600;
+  padding: 10px 0 0;
+  font-size: 19px;
+  font-weight: 800;
+  border-bottom: solid 2px #fff;
+  text-transform: uppercase;
+  display: inline-block;
+  line-height: 1;
+  margin-bottom: 20px;
 }
 footer .footer-content .footer-menu ul li {
   padding: 6px 0px;
 }
 footer .footer-content .footer-menu ul li a {
   color: #fff;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 400;
 }
 footer .footer-content .border-footer {
@@ -2025,4 +2033,16 @@ footer .footer-content .rights h4 {
   font-weight: 400;
   text-align: center;
   color: #fff;
+}
+.text-left {
+    text-align: left;
+}
+
+
+.flex-center-section{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
