--- a/src/index.css
+++ b/src/index.css
@@ -2046,3 +2046,74 @@ footer .footer-content .rights h4 {
   justify-content: center;
   height: 100%;
 }
+
+.login-wrapper .login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.login-wrapper .form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 0 auto 0;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.login-wrapper .form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.login-wrapper .form .button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #009580;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.login-wrapper .form button:hover,.login-wrapper .form button:active,.login-wrapper .form button:focus {
+  background: #43A047;
+}
+.login-wrapper .form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
+}
+.login-wrapper .form .message a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+.login-wrapper .form .register-form {
+  display: none;
+}
+
+.login-wrapper {
+  background:#009580;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;      
+}
+.login-wrapper h3 {
+  font-size: 21px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
