--- a/src/index.css
+++ b/src/index.css
@@ -2179,13 +2179,25 @@ footer .footer-content .rights h4 {
   font-size: 16px;
 }
 
+.field-item textarea {
+  width: 100%;
+  border: solid 1px #dcdcdc;
+  box-shadow: inset 0 1px 3px rgb(0 0 0 / 50%);
+  border-radius: 4px;
+  font-size: 16px;
+  padding: 10px;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  -ms-border-radius:4px;
+  -o-border-radius:4px;
+}
 .field-item input[type=text] {
   width: 100%;
   height: 43px;
   border: solid 1px #dcdcdc;
   box-shadow: inset 0 1px 3px rgb(0 0 0 / 50%);
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 16px;padding: 0 10px;
 }
 .field-item {
   margin-bottom: 20px;
